<!--
  ~  Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      https://mindorks.com/license/apache-v2
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<resources>
    <string name="app_name">BinaAhli</string>
    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="invalid_email_password">Please provide a valid email and password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVVM architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvvm_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvvm_repo">2. https://github.com/MindorksOpenSource/android-mvvm-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="title_activity_home_main">HomeActivityMain</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">MagangKu</string>
    <string name="title_notifications">Notifications</string>
    <string name="category">Kategori</string>
    <string name="label_usia">Usia</string>
    <string name="location">Lokasi Blitar</string>
    <string name="label_materi">Materi</string>
    <string name="label_alasan_magang">Alasan Magang</string>
    <string name="label_education">Pendidikan terkakhir</string>
    <string name="label_bidang_usaha">Bidang Usaha / Keahlian</string>
    <string name="label_pertemuan">Jumlah pertemuan tatap muka</string>
    <string name="label_poengajuan_hari">Pengajuan Hari</string>
    <string name="label_pekerjaan">Pekerjaan</string>
    <string name="label_lama_usaha">Lama usaha atau pengalaman</string>
    <string name="label_jadwal">Jadwal</string>
    <string name="label_kuota">Kuota</string>
    <string name="label_kurikulum">Kurikulum</string>
    <string name="label_gambar_lain">Gambar lain - lain</string>
    <string name="label_ajukan">Ajukan</string>
    <string name="label_alamat">Alamat</string>
    <string name="label_ttl">Tanggal Lahir</string>
    <string name="label_jenkel">Jenis Kelamin</string>
    <string name="label_sertifikat">Sertifikat</string>
    <string name="title_activity_student_report">StudentReportActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_pembina">Pembina</string>
    <string name="label_nama_pembina">Nama Pembina</string>
    <string name="batal">Batal</string>
    <string name="label_verified">Terverifikasi oleh admin dan pemerintah Desa</string>
    <string name="label_nama_depan">Nama Depan</string>
    <string name="label_nama_belakang">Nama Belakang</string>
    <string name="label_nama">Nama</string>
    <string name="label_nama_loker">Judul Lowongan / Magang</string>
    <string name="label_pddkn_last">Pendidikan Terakhir</string>
    <string name="labelUsername">Username</string>
    <string name="labelPwd">Password</string>
    <string name="no_internet">No Internet access</string>
    <string name="search_empty_message">Empty Item</string>
    <string name="info_data_empty">Data Empty</string>
    <string name="choose_file">Pilih File</string>
    <string name="label_upload_foto_cover">Upload Foto Cover</string>
    <string name="empty_content">Data Kosong</string>
    <string name="tap_to_retry">Coba Kembali</string>
    <string name="info_alert_file_max">"Maximum File "</string>
    <string name="camera">Camera</string>
    <string name="title_gallery">Gallery</string>
    <string name="alert_acces_granted">Permission granted</string>
    <string name="info_alert_file_cannot_read">Gagal Memilih File</string>
    <string name="info_field_canempty">Field tidak boleh kosong</string>
    <string name="info_field_gender">Harap pilih jenis kelamin</string>
    <string name="alert_success_register">"Berhasil Mendaftar "</string>
    <string name="label_kategori">Kategori</string>
    <string name="label_no_tlpn">No Tlpn</string>
    <string name="label_nm_tempat_usaha">Nama Tempat Usaha</string>
    <string name="info_field_category_empty">Harap pilih kategori</string>
    <string name="info_field_pict_empty">Harap pilih gambar lowongan</string>
    <string name="lihat_profil">Lihat Profil</string>
    <string name="label_telephone">No Telepon</string>
    <string name="label_daftar_pelamar">Lihat Pelamar</string>
    <string name="tolak">Tolak</string>
    <string name="ya">Ya</string>
    <string-array name="spin_peserta">
        <item>Pilih peserta...</item>
        <item>Baries</item>
        <item>Mulyoadi</item>
        <item>Item3</item>
    </string-array>
</resources>
