<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imv_content"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/img_loker_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewTitle"
                    style="@style/AppTextView.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imv_content"
                    app:layout_constraintTop_toTopOf="@+id/imv_content"
                    tools:text="Pengelasan dan mekanik | Blitar" />


                <TextView
                    android:id="@+id/textViewSubTitle"
                    style="@style/AppTextView.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/primary_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textViewTitle"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                    tools:text="Pelatihan pengelasan dan pembuatan pagar besi dan tralis" />

                <TextView
                    android:id="@+id/textViewLocation"
                    style="@style/AppTextView.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="ig @usahaTeknik"
                    app:layout_constraintStart_toStartOf="@+id/textViewTitle"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imv_content"
                    app:layout_constraintTop_toBottomOf="@+id/imv_content">

                    <TextView
                        android:id="@+id/textViewLabelPembina"
                        style="@style/AppTextView.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_pembina"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvNamaPembina"
                        style="@style/AppTextView.Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewLabelPembina"
                        tools:text="Suhardi" />


                    <TextView
                        android:id="@+id/textViewPembinaDetail"
                        style="@style/AppTextView.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/lihat_profil"
                        android:textColor="@color/primary_dark"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewLabelPembina" />

                    <!--materi-->
                    <TextView
                        android:id="@+id/tvLabelTtl"
                        style="@style/AppTextView.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/label_materi"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvNamaPembina" />

                    <TextView
                        android:id="@+id/TvMateri"
                        style="@style/AppTextView.Light"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/bg_rounded_border_black"
                        android:minLines="3"
                        android:paddingStart="@dimen/space_8dp"
                        android:paddingTop="@dimen/space_8dp"
                        android:paddingEnd="@dimen/space_8dp"
                        android:paddingBottom="@dimen/space_8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelTtl"
                        tools:text="1. Teknis Las Pagar \n2. Teknis Las teralis bghjkhjkhkjhkhkjhkhhh\n\ngfgfgfgfghfhg" />

                    <!--Jadwal-->
                    <TextView
                        android:id="@+id/TvLabelJenkel"
                        style="@style/AppTextView.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/label_jadwal"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TvMateri" />

                    <TextView
                        android:id="@+id/TvJadwal"
                        style="@style/AppTextView.Light"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/bg_rounded_border_black"
                        android:minLines="3"
                        android:paddingStart="@dimen/space_8dp"
                        android:paddingTop="@dimen/space_8dp"
                        android:paddingEnd="@dimen/space_8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TvLabelJenkel"
                        tools:text="Pukul 07:00 - 15:00 Wib \n1 Maret - 25 Mei (setiap jumat dan sabtu)" />

                    <!--pertemuan-->
                    <TextView
                        android:id="@+id/TvLabelPekerjaan"
                        style="@style/AppTextView.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/label_pertemuan"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TvJadwal" />

                    <TextView
                        android:id="@+id/EtPekerjaan"
                        style="@style/AppTextView.Light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TvLabelPekerjaan"
                        tools:text="15" />


                    <!--kuota-->
                    <TextView
                        android:id="@+id/textViewLabelKuota"
                        style="@style/AppTextView.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/label_kuota"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/EtPekerjaan" />

                    <TextView
                        android:id="@+id/textViewKuota"
                        style="@style/AppTextView.Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="@dimen/ts_medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewLabelKuota"
                        tools:text="2 Orang" />

                    <!--item kurikulum-->
                    <TextView
                        android:id="@+id/textViewLabelKurikulum"
                        style="@style/AppTextView.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/label_kurikulum"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewKuota" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_curicullum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="@+id/textViewLabelKurikulum"
                        app:layout_constraintTop_toBottomOf="@+id/textViewLabelKurikulum" />
                    <!--alamat-->
                    <TextView
                        android:id="@+id/TvLabelAlamat"
                        style="@style/AppTextView.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/label_alamat"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_curicullum" />

                    <TextView
                        android:id="@+id/tvAlamatLoker"
                        style="@style/AppTextView.Light"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/bg_rounded_border_black"
                        android:minLines="3"
                        android:paddingStart="@dimen/space_8dp"
                        android:paddingTop="@dimen/space_8dp"
                        android:paddingEnd="@dimen/space_8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TvLabelAlamat"
                        tools:text="Jl Marga" />

                    <!--alamat-->
                    <TextView
                        android:id="@+id/TvLabelNoTlpn"
                        style="@style/AppTextView.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/label_telephone"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvAlamatLoker" />

                    <TextView
                        android:id="@+id/TvNoTelephone"
                        style="@style/AppTextView.Light"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/space_40dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/bg_rounded_border_black"
                        android:paddingStart="@dimen/space_8dp"
                        android:paddingTop="@dimen/space_8dp"
                        android:paddingEnd="@dimen/space_8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/TvLabelNoTlpn"
                        tools:text="97678567475" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/BtnApply"
                        style="@style/AppTextView.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_20dp"
                        android:background="@color/primary_dark"
                        android:text="@string/label_ajukan"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        app:layout_constraintTop_toBottomOf="@+id/TvNoTelephone" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/BtnListPelamar"
                        style="@style/AppTextView.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_button_fill_round_green"
                        android:text="@string/label_daftar_pelamar"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/BtnApply" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_40dp"
                        app:layout_constraintTop_toBottomOf="@+id/BtnListPelamar" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>