<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imv_content"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_image_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTitle"
                style="@style/AppTextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imv_content"
                app:layout_constraintTop_toTopOf="@+id/imv_content"
                tools:text="TextView" />


            <TextView
                android:id="@+id/textViewSubTitle"
                style="@style/AppTextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="@+id/textViewTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                tools:text="TextView" />

            <TextView
                android:id="@+id/textViewLocation"
                style="@style/AppTextView.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintStart_toStartOf="@+id/textViewTitle"
                app:layout_constraintTop_toBottomOf="@+id/textViewSubTitle"
                tools:text="TextView" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imv_content"
                app:layout_constraintTop_toBottomOf="@+id/imv_content">

                <TextView
                    android:id="@+id/textViewLabelPembina"
                    style="@style/AppTextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_usia"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/EtNamaDepan"
                    style="@style/AppTextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLabelPembina"
                    tools:text="TextView" />

                <!--materi-->
                <TextView
                    android:id="@+id/tvLabelTtl"
                    style="@style/AppTextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/label_alamat"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/EtNamaDepan" />

                <TextView
                    android:id="@+id/EtTtl"
                    style="@style/AppTextView.Light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelTtl"
                    tools:text="TextView" />

                <!--Jadwal-->
                <TextView
                    android:id="@+id/TvLabelJenkel"
                    style="@style/AppTextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/label_education"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/EtTtl" />

                <TextView
                    android:id="@+id/EtJenkel"
                    style="@style/AppTextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TvLabelJenkel"
                    tools:text="TextView" />

                <!--pertemuan-->
                <TextView
                    android:id="@+id/TvLabelPekerjaan"
                    style="@style/AppTextView.Bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/label_pekerjaan"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/EtJenkel" />

                <TextView
                    android:id="@+id/EtPekerjaan"
                    style="@style/AppTextView.Light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TvLabelPekerjaan"
                    tools:text="TextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>